# vapi

./: MANIFEST.in  README.rst  setup.cfg  setup.py  test_vapi.py  tox.ini  vapi.py
