[metadata]
name = vapi
summary = Versioned API
description-file =
    README.rst
author = Kevin L. Mitchell
author-email = kevin.mitchell@rackspace.com
home-page = https://github.com/klmitch/vapi
classifier =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
modules =
    vapi

[wheel]
universal = 1
